--- a/style.css
+++ b/style.css
@@ -1,18 +1,41 @@
-a {
-    display: block;
-    width: 300px;
-    padding: 31px 5px;
-    border-radius: 5px;
-    margin: 20% auto;
-    background-color: orange;
+html,
+body {
+    margin-top: 50px;
+    height: 100%;
     text-align: center;
-    font-family: Helvetica;
-    font-size: 32px;
-    color: mintcream;
-    transition-property: background-color;
-    transition-duration: 750ms;
+    font-family: Arial, sans-serif;
+    font-size: 16px;
 }
 
-a:hover {
-    background-color: limegreen;
+h1 {
+    font-size: 40px;
+}
+
+.game {
+    position: relative;
+    display: inline-block;
+    height: 60%;
+}
+
+.game img {
+    cursor: pointer;
+}
+
+.game .safari {
+    margin-top: 50px;
+    height: 430.188px;
+    width: 573.578px;
+}
+
+.game .gazelle {
+    position: absolute;
+    top: 260px;
+    left: 231px;
+    z-index: 1;
+    max-height: 50px;
+    transition: max-height 750ms 400ms linear;
+}
+
+.game .gazelle:hover {
+    max-height: 180px;
 }
